# Copyright 2023 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "check",
    srcs = [
        "main.go",
    ],
    importpath = "github.com/ProjectSerenity/vdm/cmd/check",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/starlark",
        "//internal/vendeps",
        "//vendor/github.com/google/osv-scanner/pkg/models",
        "//vendor/github.com/google/osv-scanner/pkg/osv",
    ],
)
