# Copyright 2023 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "gomodproxy",
    srcs = [
        "gomodproxy.go",
        "gosumdb.go",
    ],
    importpath = "github.com/ProjectSerenity/vdm/internal/gomodproxy",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/simplehttp",
        "//vendor/golang.org/x/mod/module",
        "//vendor/golang.org/x/mod/semver",
        "//vendor/golang.org/x/mod/sumdb",
        "//vendor/golang.org/x/mod/sumdb/dirhash",
        "//vendor/golang.org/x/mod/zip",
    ],
)
