# Copyright 2023 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "simplehttp",
    srcs = [
        "http.go",
    ],
    importpath = "github.com/ProjectSerenity/vdm/internal/simplehttp",
    visibility = ["//:__subpackages__"],
    deps = [
        "//vendor/golang.org/x/time/rate",
    ],
)
