# Copyright 2023 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "starlark",
    srcs = [
        "starlark.go",
    ],
    importpath = "github.com/ProjectSerenity/vdm/internal/starlark",
    visibility = ["//:__subpackages__"],
    deps = [
        "//vendor/github.com/bazelbuild/buildtools/build",
    ],
)

go_test(
    name = "starlark_test",
    size = "small",
    srcs = [
        "starlark_test.go",
    ],
    embed = [":starlark"],
    deps = [
        "//vendor/rsc.io/diff",
    ],
)
