# Copyright 2023 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vendeps",
    srcs = [
        "actions.go",
        "cache.go",
        "digest.go",
        "go.go",
        "license.go",
        "patch.go",
        "vendeps.go",
    ],
    importpath = "github.com/ProjectSerenity/vdm/internal/vendeps",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/gomodproxy",
        "//internal/simplehttp",
        "//internal/starlark",
        "//vendor/golang.org/x/mod/semver",
    ],
)

go_test(
    name = "vendeps_test",
    size = "small",
    srcs = [
        "cache_test.go",
        "digest_test.go",
        "license_test.go",
    ],
    embed = [":vendeps"],
    deps = [
        "//vendor/rsc.io/diff",
    ],
)
